# proof-of-participation

./: CMakeLists.txt  Makefile  README.md  ai_autonomy.cpp  consensus_preservation.cpp  crypto_modern.h  db_modern.h  goldcoin.h  goldcoin_consensus.h  goldcoin_specs.h  hardfork.cpp  hybridfee.cpp  hybridfee_modern.cpp  hybridfee_modern.h  init_modern.h  main.cpp  main_modern.h  main_simplified.h  net_modern.h  participation.cpp  participation.h  participation_modern.cpp  participation_modern.h  pop_checkpoints.cpp  pop_security.cpp  qt_pop_widgets.cpp  qt_pop_widgets.h  rpc_modern.h  script_modern.h  serialize_modern.h  util_modern.h  vrf.h  wallet_modern.h
.claude/: settings.local.json
